# ws_server

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  config.h  config.ini.example  config_builder.cpp  config_builder.h  main.cpp  ws_server.cpp  ws_server.h
tests/: CMakeLists.txt  test_config.cpp  test_ws_server.cpp
tests/fixtures/: invalid_config1.ini  invalid_config2.ini
